Added inflating of CardView with text and audio

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -18,6 +18,24 @@
             android:layout_alignParentTop="true"
             android:layout_marginRight="16dp" />
 
+        <LinearLayout
+            android:id="@+id/lltText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below ="@+id/person_photo">
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/lltAudio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below ="@+id/lltText">
+
+        </LinearLayout>
+
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
