--- a/app/src/main/res/layout/recyclerview_activity.xml
+++ b/app/src/main/res/layout/recyclerview_activity.xml
@@ -15,11 +15,24 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/btnChange"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:text="Change" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Add text" />
+        <Button
+            android:id="@+id/btnAudio"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Add audio" />
+    </LinearLayout>
 
 </LinearLayout>
