--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -12,11 +12,9 @@
 
         <ImageView
             android:id="@+id/person_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="16dp" />
+            android:layout_alignParentTop="true" />
 
         <LinearLayout
             android:id="@+id/lltDescription"
